# blackpepper

./: .editorconfig  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  eslint.config.js  package.json  prettier.config.cjs  session-ses_423f.md  session-ses_4707.md  tsconfig.json  verbump.skill
crates/blackpepper/: Cargo.toml
crates/blackpepper/assets/prompts/: COMMIT_CHANGES.md  PR_CREATE.md  WORKSPACE_RENAME.md
crates/blackpepper/src/: animals.rs  app.rs  commands.rs  config.rs  events.rs  git.rs  input.rs  keymap.rs  main.rs  repo_status.rs  state.rs  terminal.rs  test_utils.rs  tmux.rs  updater.rs  workspaces.rs
crates/blackpepper/src/animals/: mod.rs
crates/blackpepper/src/app/: input.rs  mod.rs  render.rs  runner.rs  state.rs
crates/blackpepper/src/app/input/: command.rs  event.rs  mod.rs  mouse.rs  overlay.rs  search.rs  terminal.rs  utils.rs  workspace.rs
crates/blackpepper/src/app/render/: layout.rs  mod.rs  output.rs  overlays.rs  work_area.rs
crates/blackpepper/src/commands/: exec.rs  mod.rs  parse.rs  pr.rs  registry.rs  rename.rs
crates/blackpepper/src/commands/exec/: init.rs  mod.rs  ports.rs  pr_command.rs  tests.rs  update.rs  workspace.rs
crates/blackpepper/src/commands/exec/workspace/: create.rs  list.rs  (+5 more)
crates/blackpepper/src/config/: mod.rs  tests.rs
crates/blackpepper/src/events/: mod.rs
crates/blackpepper/src/git/: mod.rs
crates/blackpepper/src/keymap/: mod.rs
crates/blackpepper/src/providers/: agent.rs  mod.rs  upstream.rs
crates/blackpepper/src/repo_status/: tests.rs
crates/blackpepper/src/state/: mod.rs  tests.rs
crates/blackpepper/src/terminal/: hooks.rs  input.rs  input_modes.rs  mod.rs  pty.rs  render.rs
crates/blackpepper/src/ui/: layout.rs  mod.rs  widgets.rs
crates/blackpepper/src/workspaces/: mod.rs
(+33 files in other folders)
