[package]
name = "blackpepper"
version = "0.1.18"
edition = "2021"
description = "Terminal orchestrator for TUI coding agents with isolated workspaces."

[[bin]]
name = "bp"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
ratatui = "0.29"
portable-pty = "0.8"
vt100 = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
arboard = "3.3"
notify = "6.1"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
