[package]
name = "blackpepper"
version = "0.1.57"
edition = "2021"
description = "Terminal orchestrator for TUI coding agents with isolated workspaces."

[[bin]]
name = "bp"
path = "src/main.rs"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
portable-pty = "0.9.0"
vt100 = "0.16.2"
termwiz = "0.23.3"
serde = { version = "1.0.228", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
toml = { version = "0.9.11", features = ["preserve_order"] }
dirs = "6.0.0"
notify = "8.2.0"
serde_json = "1.0.149"
libc = "0.2.180"
arboard = "3"
base64 = "0.22"
notify-rust = "4"

[dev-dependencies]
tempfile = "3.24.0"
